Configurada API de movieCatalog y creado su restTemplate